# CLPE_G_NVP2650D_SDK-ros2-release

./: CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  Readme.txt  debian.store  no_password.sh  package.xml  patches.conf  releaser_history.json  tracks.yaml
cmake/: extra_dependencies.cmake
debian/: changelog  control  copyright  gbp.conf  rules
include/: ClpeClientApi.h  ClpeGlobalDef.h  ClpeSDKVersion.h  ClpeSocket.h  ClpeStream.h  ClpeStreamApi.h
lib/: ClpeClientApi.cpp  ClpeSocket.cpp  ClpeStream.cpp  Makefile
main/: ClpeApi_Example_Main.cpp  Makefile
